# cargo-teaclave

./: .gitignore  README.md  TODO.md  go.mod  go.sum  main.go
.github/workflows/: test-hello-world.yml
assets/rsgx-edls/: .gitignore  Cargo.toml  vendorize.sh
assets/testing-driver/: renew.sh  rev.txt
assets/testing-driver@v1.1.2/: .gitignore
cmd/: root.go  test.go
examples/test-hello-world/: Cargo.toml  README.md
examples/test-hello-world/src/: lib.rs
pkg/assets/: assets.go
pkg/cargo/: cargo.go  workspace.go
pkg/config/: assets.go  config.go
pkg/xpackr/: packr.go
tools/assets/: assets.go  edl.go  testing_driver.go
tools/testings/: internal.go  testings.go
